[package]
name = "xactor-benchmarks"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[lib]
name = "xactor_benchmarks"
path = "src/main.rs"

[[bench]]
name = "actor_comparison"
harness = false
path = "src/benches.rs"

[dependencies]
actix = "0.12.0"
async-trait = "0.1.24"
tokio-test = "0.4.2"
xactor = { versino = "0.7.6", default-features = false, features = ["runtime-tokio"] }

[dev-dependencies]
criterion = "0.3.2"
num_cpus = "1.13.0"
smol = "1.2.5"
